# llm-graph-based-problem-solving

./: .gitignore  README.md  install_datasets.sh  project_utils.py  pyproject.toml
examples/: base_result_plotter.py
examples/CommonsenseQA/: README.md  plot.py  qa.py
examples/CommonsenseQA copy/: plot.py
examples/CommonsenseQA/src/: parser.py  prompter.py  utils.py
examples/HotpotQA/: cleanup_hotpotqa.py  hotpotqa.py  plot.py
examples/HotpotQA/services/: index_hotpotqa.py  index_hotpotqa_wiki.py  run_hotpotqa_index.py
examples/HotpotQA/src/: parser.py  prompter.py  utils.py
examples/bigbench_hard/: README.md  bbh_tasks.py  bigbench_hard.py  plot.py  test.py
examples/doc_merge/: plot.py
examples/gsm8k/: README.md  gsm8k.py  plot.py  utils.py
examples/gsm8k/src/: parser.py  prompter.py  utils.py
examples/keyword_counting/: plot.py
examples/set_intersection/: plot.py
examples/sorting/: plot.py  sorting_032.py
graph_of_thoughts/controller/: controller.py
graph_of_thoughts/language_models/: __init__.py  abstract_language_model.py  chatgpt.py  config_template.json  llamachat_hf.py  replicate_llama_3.py
graph_of_thoughts/operations/: __init__.py  operations.py  probtree_operation.py  probtree_tree.py
graph_of_thoughts/parser/: parser.py
graph_of_thoughts/prompter/prompts/: probtree_ca.txt  probtree_cb.txt  probtree_ob_multihop.txt  probtree_ob_singlehop.txt
