[tool.poetry]
name = "graph_of_thoughts"
version = "0.0.3"
description = "Python package for Graph of Thoughts that enables solving elaborate problems with Large Language Models"
authors = [
  "Maciej Besta <maciej.besta@inf.ethz.ch>",
  "Nils Blach <nils.blach@inf.ethz.ch>",
  "Ales Kubicek <akubicek@student.ethz.ch>",
  "Robert Gerstenberger <gerstenberger.robert@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/spcl/graph-of-thoughts"
repository = "https://github.com/spcl/graph-of-thoughts"
documentation = "https://github.com/spcl/graph-of-thoughts"
license = "License file"

[tool.poetry.dependencies]
python = "^3.9"
backoff = "^2.2.1"
openai = "^1.30.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.3"
sympy = "^1.12"
torch = "^2.0.1"
transformers = "^4.31.0"
accelerate = "^0.21.0"
bitsandbytes = "^0.41.0"
scipy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
